[project]
name = "dat-dashboard"
version = "0.1.0"
description = "Digital Asset Treasury (DAT) Performance Dashboard"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "pyarrow>=19.0.0",
    "scipy>=1.17.0",
    "streamlit>=1.54.0",
    "yfinance>=1.1.0",
]
